--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -1,14 +1,10 @@
 #add_subdirectory(headless)
 
 target_sources(NeuralPi PRIVATE
-	AmpOSCReceiver.h
-	Delay.h
+	CabSim.cpp
 	Eq4Band.cpp
-	Eq4Band.h
 	PluginProcessor.cpp
-	PluginProcessor.h
 	NeuralNetwork.cpp
-	NeuralNetwork.h
 )
 
 #target_precompile_headers(NeuralPi PRIVATE pch.h)
